End of Section 10.7

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
- "Token": "super secret key"
+    "Token": "super secret key"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings" :{
+  "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=DatingAppDB;Persist Security Info=True;Integrated Security = true"
+  },
+  "CloudinarySettings": {
+    "CloudName": "binod040882",
+    "ApiKey": "784423574789931",
+    "ApiSecret": "8LMKrbUCi5exoawn-jNewctW3Tk"
   }
 }
