--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e"    
   },
   "private": true,
   "dependencies": {
@@ -26,9 +26,10 @@
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.5.5",    
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "time-ago-pipe": "^1.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.3",
